# cryptolib

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
cryptolib/: __init__.py  __main__.py
cryptolib/blockciphers/: AES.py  CBC.py  ECB.py  Engine.py  Mode.py  README.md  __init__.py
cryptolib/blockciphers/algorithms/: AES.py  BCEngine.py  SHACAL1.py  __init__.py
cryptolib/blockciphers/attacks/: chosen_cipher.py  chosen_plain.py  plain_cipher_pairs.py
cryptolib/blockciphers/chosen_cipher/: cracks.py  oracles.py
cryptolib/blockciphers/chosen_plain/: attacks.py  oracles.py
cryptolib/blockciphers/ciphertext_only/: attacks.py  cracks.py
cryptolib/blockciphers/engines/: AES.py  Engine.py  __init__.py
cryptolib/blockciphers/oracles/: __init__.py  oracles.py
cryptolib/blockciphers/plain_cipher_pairs/: attacks.py  cracks.py
cryptolib/cracks/: bc_oracles.py  exhaust.py  rngs.py  substitution.py  two_time_pad.py
cryptolib/hashes/: MAC.py  __init__.py
cryptolib/hashes/MD2/: MD2.py  __init__.py
cryptolib/hashes/MD4/: MD4.py  __init__.py
cryptolib/hashes/MD5/: MD5.py  __init__.py
cryptolib/hashes/SHA1/: SHA1.py  __init__.py
cryptolib/hashes/SHA2/: SHA2.py  __init__.py
cryptolib/maths/: encoding.py  lattices.py  math.py  primes.py  smallPrimes.py
cryptolib/misc/: substitution.py  two_time_pad.py
cryptolib/oracles/: AdditionalPlaintextOracle.py  AdditionalPlaintextWithQuotingOracle.py  BCOracle.py  ECB_CBC_oracle.py  ECB_suffix_oracle.py  FixedKeystreamEncryptor.py  Oracle.py  PaddingOracle.py  SequentialOracle.py  __init__.py
cryptolib/pipes/: AddIV.py  BCDecrypt.py  BCDecryptPipe.py  BCEncrypt.py  BCEncryptPipe.py  CBCDecrypt.py  CBCEncrypt.py  CTR.py  ECBDecrypt.py  ECBEncrypt.py  GenIV.py  PRNGStreamCipher.py  PadPKCS7.py  PadPKCS7Pipe.py  Pipe.py  RandomBytes.py  StripPKCS7.py  StripPKCS7Pipe.py  __init__.py
cryptolib/prfs/: BytesFromNumbers.py  RBGEngine.py  README.md  RNGEngine.py  __init__.py
cryptolib/prfs/MT19937/: MT19937.py  MTattacks.py  __init__.py
cryptolib/publickey/: __init__.py
cryptolib/publickey/DiffieHellman/: DiffieHellman.py  badPrime.py  exportGrade.py  implementations.py  weakerExportGrade.py
cryptolib/publickey/RSA/: RSA.py  __init__.py
cryptolib/rngs/: MT19937.py  MTattacks.py  README.md  RNG.py  __init__.py  attacks.py
cryptolib/rngs/algorithms/: LCG.py  MT19937.py  __init__.py
cryptolib/streamciphers/: README.md
cryptolib/streamciphers/algorithms/: BlockCipherCTR.py  __init__.py
cryptolib/tests/: __init__.py
cryptolib/tests/cryptopals/: Challenge.py  __init__.py  set1.py  set2.py
cryptolib/tests/cryptopals/data/: challenge06.py  challenge08.py  challenge10.py
cryptolib/tests/cryptopals/oracles/: challenge13.py
cryptolib/utils/: SequentialOracle.py  __init__.py  byteops.py  conversion.py  files.py  math.py  padding.py  plain_scoring.py
examples/: forever_ctf.py
examples/cryptohack/encoding-challenge/: encoding-challenge.py
examples/cryptohack/lemur-xor/: lemur-xor.py
examples/cryptohack/too-many-errors/: too-many-errors.py
lib/: CMakeLists.txt
lib/AES/: CMakeLists.txt
lib/AES/include/: AES.h
lib/AES/src/: AES.c  AES_decr.c  AES_encr.c  AES_encr.h  AES_ks.c  AES_ks.h  AES_ks_test.c  AES_sbox.c  AES_sbox.h  AES_test.c  AES_utils.c  AES_utils.h
lib/IO/: CMakeLists.txt
lib/IO/include/: IO.h
lib/IO/src/: IO.c
lib/MD4/: CMakeLists.txt
lib/MD4/include/: MD4.h
lib/MD4/src/: MD4.c  MD4_test.c  constants.h  helper_functions.h
lib/MDHashes/: CMakeLists.txt
lib/MDHashes/include/: Hash.h  MD4.h
lib/MDHashes/src/: MD4.c  MD4.h  MD4_test.c  constants_MD4.h  constants_global.h  helper_functions.c  helper_functions.h  md.h  md4_setup.c  setup.h
lib/MDHashes/src/md2/: MD2.c  MD2.h  MD2_test.c  constants.h  md2_setup.c
lib/MDHashes/src/md4/: MD4.c  MD4.h  MD4_test.c  constants.h  md4_setup.c
lib/MDHashes/src/md5/: MD5.c  MD5.h  MD5_test.c  constants.h  md5_setup.c
lib/MDHashes/test/: test.c  test.h
lib/MersenneTwister/: CMakeLists.txt
lib/MersenneTwister/include/: MT.h
lib/MersenneTwister/src/: MT.c  MT_test.c
lib/SHA/: CMakeLists.txt
lib/SHA/include/: Hash.h  SHA256.h
lib/SHA/src/: SHA1.c  constants.h  preprocessing.c  preprocessing.h  sha1.c  sha1and256.c
lib/SHA/test/: test.c  test.h  test_sha1.c  test_sha256.c
lib/SHACAL/: CMakeLists.txt  README.md
lib/SHACAL/include/: shacal_1.h  shacal_2.h
lib/SHACAL/src/: shacal_1.c  shacal_2.c
lib/SHACAL/test/: test.c  test_shacal1.c  test_shacal2.c
test/: AES_test.c  CMakeLists.txt
tests/test_blockciphers/: test_AES.py  test_chosen_cipher_attacks.py  test_chosen_plain_attacks.py  test_ciphertext_only_attacks.py  test_oracles.py  test_plain_cipher_pairs_attacks.py
tests/test_cracks/: test_bc_oracles.py  test_rngs.py
tests/test_cryptopals/: test_set1.py  test_set2.py  test_set3.py  test_set4.py  test_set5.py
tests/test_cryptopals/data/: challenge04.py  challenge06.py  challenge07.py  challenge10.py  challenge12.py  challenge13.py  challenge16.py  challenge17.py  challenge19.py  challenge20.py  challenge24.py  challenge25.py  challenge26.py  challenge27.py  challenge28.py  challenge30.py  challenge31.py  challenge34.py
tests/test_cryptopals/oracles/: challenge13.py  challenge16.py
tests/test_hashes/: test_hashes.py
tests/test_maths/: test_encodings.py  test_lattices.py  test_math.py  test_primes.py
tests/test_oracles/: test_PaddingOracle.py  test_SequentialOracle.py
tests/test_pipes/: test_BCDecrypt.py  test_BCDecryptPipe.py  test_BCEncrypt.py  test_BCEncryptPipe.py  test_CBCDecrypt.py  test_CBCEncrypt.py  test_CTR.py  test_ECBDecrypt.py  test_ECBEncrypt.py  test_PadPKCS7.py  test_PadPKCS7Pipe.py  test_RandomBytes.py
tests/test_publickey/: test_DiffieHellman.py  test_RSA.py
tests/test_rngs/: test_MT19937.py
tests/test_streamciphers/: test_BlockCipherCTR.py
tests/test_utils/: test_SequentialOracle.py  test_math.py  test_padding.py
tests/test_utils/test_byteops/: test_bytes_to_blocks.py  test_reconstruct.py  test_transpose.py
